--- a/app/templates/reply_guy/index.html
+++ b/app/templates/reply_guy/index.html
@@ -337,37 +337,37 @@
                     {% endif %}
                 </div>
             </div>
+        </div>
+    </div>
+</div>
 
-            <!-- Simple X List Input Panel -->
-            <div id="create-list-modal" class="modal" style="display: none;">
-                <div class="modal-content">
-                    <div class="form-section">
-                        <h3 class="form-title">
-                            <i class="ph ph-plus-circle"></i>
-                            Add Custom X List
-                        </h3>
+<!-- Simple X List Input Panel Modal -->
+<div id="create-list-modal" style="display: none;">
+    <div class="modal-content">
+        <div class="form-section">
+            <h3 class="form-title">
+                <i class="ph ph-plus-circle"></i>
+                Add Custom X List
+            </h3>
 
-                        <div class="simple-form">
-                            <div class="form-group">
-                                <label for="simple-list-name">List Name</label>
-                                <input type="text" id="simple-list-name" class="form-input" placeholder="Enter a name for your list...">
-                            </div>
+            <div class="simple-form">
+                <div class="form-group">
+                    <label for="simple-list-name">List Name</label>
+                    <input type="text" id="simple-list-name" class="form-input" placeholder="Enter a name for your list...">
+                </div>
 
-                            <div class="form-group">
-                                <label for="simple-x-list-id">X List ID</label>
-                                <input type="text" id="simple-x-list-id" class="form-input" placeholder="Enter X List ID...">
-                                <small class="form-help">Find this in the URL of any X list (e.g., x.com/i/lists/1234567890)</small>
-                            </div>
+                <div class="form-group">
+                    <label for="simple-x-list-id">X List ID</label>
+                    <input type="text" id="simple-x-list-id" class="form-input" placeholder="Enter X List ID...">
+                    <small class="form-help">Find this in the URL of any X list (e.g., x.com/i/lists/1234567890)</small>
+                </div>
 
-                            <div class="form-actions">
-                                <button id="simple-create-btn" class="primary-btn">
-                                    <i class="ph ph-plus"></i>
-                                    Add List
-                                </button>
-                                <button id="cancel-create-btn" class="secondary-btn">Cancel</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="form-actions">
+                    <button id="simple-create-btn" class="primary-btn">
+                        <i class="ph ph-plus"></i>
+                        Add List
+                    </button>
+                    <button id="cancel-create-btn" class="secondary-btn">Cancel</button>
                 </div>
             </div>
         </div>
