--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1139,32 +1139,32 @@
                 <i class="ph ph-caret-right chevron"></i>
             </div>
             <div class="nav-group-items">
-                <a href="{{ url_for('tiktok.hook_generator') }}"
-                   class="nav-subitem {% if request.endpoint and 'tiktok.hook_generator' in request.endpoint %}active{% endif %}"
+                <a href="{{ url_for('hook_generator.hook_generator') }}"
+                   class="nav-subitem {% if request.endpoint and 'hook_generator.' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-megaphone-simple"></i>
                     <span>Hook Generator</span>
                 </a>
-                <a href="{{ url_for('tiktok.titles_hashtags') }}"
-                   class="nav-subitem {% if request.endpoint and 'tiktok.titles_hashtags' in request.endpoint %}active{% endif %}"
+                <a href="{{ url_for('titles_hashtags.titles_hashtags') }}"
+                   class="nav-subitem {% if request.endpoint and 'titles_hashtags.' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-hash"></i>
                     <span>Titles & Hashtags</span>
                 </a>
-                <a href="{{ url_for('tiktok.trending_sounds') }}"
-                   class="nav-subitem {% if request.endpoint and 'tiktok.trending_sounds' in request.endpoint %}active{% endif %}"
+                <a href="{{ url_for('trending_sounds.trending_sounds') }}"
+                   class="nav-subitem {% if request.endpoint and 'trending_sounds.' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-music-notes"></i>
                     <span>Trending Sounds</span>
                 </a>
-                <a href="{{ url_for('tiktok.trend_finder') }}"
-                   class="nav-subitem {% if request.endpoint and 'tiktok.trend_finder' in request.endpoint %}active{% endif %}"
+                <a href="{{ url_for('trend_finder.trend_finder') }}"
+                   class="nav-subitem {% if request.endpoint and 'trend_finder.' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-trend-up"></i>
                     <span>Trend Finder</span>
                 </a>
-                <a href="{{ url_for('tiktok.analytics') }}"
-                   class="nav-subitem {% if request.endpoint and 'tiktok.analytics' in request.endpoint %}active{% endif %}"
+                <a href="{{ url_for('tiktok_analytics.analytics') }}"
+                   class="nav-subitem {% if request.endpoint and 'tiktok_analytics.' in request.endpoint %}active{% endif %}"
                    onclick="return BaseApp.checkGuestAccess(event, this)">
                     <i class="ph ph-chart-line"></i>
                     <span>Analytics</span>
